# gridchen

./: .gitignore  GridChen.d.ts  LICENSE  README.md  array_of_column_arrays.html  array_of_row_arrays.html  array_of_row_objects.html  column_order_objects_of_columns.html  column_order_row_objects.html  column_types.html  demo.css  demo.js  demo1.html  demo2.html  demo3.html  flex-layout.html  gridchip.d.ts  index.html  javascript_api.html  jsconfig.json  json_types.html  object_date_formats.html  object_of_columns.html  plot.html  pyproject.toml  readme.html  readonly.html  real-time.html  setup.py  single_column_array.html  string_date_formats.html  suiterunner.html  testing.md  testrunner.html  theme.js  types.css  unicode-symbols.html  virtual_scrolling.html  window-navigator.html
dev_server/: server.py  start_server.sh
docs/: DataViews.js  GridChen.js  index.html
examples/: demo.js  plot.js  plotly.js  plotly_wrapper.js
grid-chen/: DataViews.js  GridChen.js  component.js  converter.js  editor.js  geometry.js  grid-chen-internal.d.ts  grid-chen.d.ts  grid-data-view.js  matrixview.js  selection.js  utils.js  webcomponent.js
gridchen/: .npmignore  __init__.py  converter.js  editor.js  grid-chen-internal.d.ts  grid-chen.d.ts  gridchen.d.ts  index.js  json_patch_merge.js  matrixview.js  package.json  selection.js  utils.js  webcomponent.js
modules/: DataViews.js  FormChen.js  GridChen.js  converter.js  gridChen.js  gridchip.js  matrix_view.js  plot.js
tests/: modules.js  readme.html  suiterunner.html  test_Clipboard.js  test_Converter.js  test_DataViews.js  (+12 more)
(+27 files in other folders)
