[tool.poetry]
name = "gridchen"
version = "0.3.0"
description = "Very lightweight and fast editable web grid with strict MS-Excel adherence to user experience."
authors = ["Wolfgang Kühn"]
homepage = "https://github.com/decatur/grid-chen"
repository = "https://github.com/decatur/grid-chen"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1"
