[tool.poetry]
name = "gridchen"
version = "0.1.4beta1"
description = "Very lightweight and fast editable web grid with strict MS-Excel adherence to user experience."
authors = ["Wolfgang Kühn"]
homepage = "https://github.com/decatur/gridchen"
repository = "https://github.com/decatur/gridchen"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
